Fixed layout on mobile landscape

--- a/source/stylesheets/components/_blocks.scss
+++ b/source/stylesheets/components/_blocks.scss
@@ -9,13 +9,25 @@
 }
 
 .big-block {
-  height: 210vh;
+  height: 220vh;
   padding-top: 10vh;
   h2, ul {
   color: $my-black;
   }
-  @media only screen and (min-width: 768px) {
-    height: 190vh;
+    @media only screen and (min-width: 360px) and (max-width: 500px) {
+    height: 180vh;
+  }
+    @media only screen and (min-width: 500px) and (max-width: 620px) {
+    height: 340vh;
+  }
+    @media only screen and (min-width: 620px) and (max-width: 760px) {
+    height: 290vh;
+  }
+  @media only screen and (min-width: 760px) and (max-width: 1000px) {
+    height: 130vh;
+  }
+    @media only screen and (min-width: 1000px) {
+    height: 180vh;
   }
 }
 
@@ -25,6 +37,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-position: right top;
   @media only screen and (max-width: 768px) {
     margin-top: -85px;
     height: calc(100vh + 8px);
