--- a/source/stylesheets/components/_timeline.scss
+++ b/source/stylesheets/components/_timeline.scss
@@ -146,18 +146,18 @@ time {
   }
 }
 
-@media screen and (max-width: 900px) {
-  .timeline ul li div {
-    width: 200px;
-    height: auto;
-  }
-  .timeline ul li:nth-child(even) div {
-    left: -289px;
-    /*250+45-6*/
-  }
-}
+// @media screen and (max-width: 900px) {
+//   .timeline ul li div {
+//     width: 200px;
+//     height: auto;
+//   }
+//   .timeline ul li:nth-child(even) div {
+//     left: -289px;
+//     /*250+45-6*/
+//   }
+// }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 720px) {
   .timeline ul li {
     margin-left: 20px;
   }
@@ -183,13 +183,13 @@ time {
 // Diferenciação
 
 .desktop {
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 700px) {
       display: none;
     }
 }
 
 .mobile {
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 700px) {
       display: none;
     }
 }
